@@ -1,7 +1,6 @@
 allprojects {
     tasks.withType(JavaCompile) {
         options.compilerArgs.addAll([
-                '--enable-preview',
                 '-Xlint:preview',
                 '-Xlint:unchecked',
                 '-Xlint:deprecation'
